--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
            	<div id="topBanner">
-<img src="https://images.wallpapersden.com/image/download/avengers-endgame-banner_a2lsbmqUmZqaraWkpJRsZmxorWhlZWU.jpg" style="width: 100%">
+<img src="https://images.wallpapersden.com/image/download/avengers-endgame-banner_a2lsbmqUmZqaraWkpJRsZmxorWhlZWU.jpg" style="width: 90%">
                           	<img id="logo" src="https://superbromovies.files.wordpress.com/2018/05/marvel-entertainment-logo.jpg?w=1024&h=292&crop=1" style="width: 200px; margin: 10px;">
                           	<div>
                                          	<img id="signInIcon" src="https://www.simplyhealth.co.uk/shcore/sh/furniture/images/svgs/top-nav-account-icon.svg">
@@ -63,7 +63,7 @@
                                          	<p> INSERT TEXT HERE </p>
                           	</div>
                           	<div>
-                                         	<img class="place" src=" https://static.wikia.nocookie.net/disney/images/5/5a/Monsters-inc-disneyscreencaps.com-9782.jpg/revision/latest/top-crop/width/360/height/450?cb=20200609162910 ">
+                                         	<img class="place" src=" https://cdn.marvel.com/content/1x/jam_payoff_digital_ka_v7_lg.jpg ">
                                          	<p> INSERT TEXT HERE </p>
                           	</div>
            	</div>
